commit 0.1.0 added fixes 03-April-2023

--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -943,6 +943,7 @@ form .form-field select.form-control {
   background-size: 13px auto;
   cursor: pointer;
   padding-right: 33px !important;
+  padding-left: 15px !important;
 }
 .login-signup-03 .login-btn {
   display: flex;
