--- a/src/styles/css/responsive.css
+++ b/src/styles/css/responsive.css
@@ -3029,9 +3029,6 @@
     padding-left: 20px;
     padding-right: 20px;
   }
-  .dashboard-link-wrap ul li a span {
-    padding-left: 10px;
-  }
   .profile-inner-sec.p-4 {
     padding-left: 0px !important;
     padding-right: 0px !important;
@@ -3061,6 +3058,9 @@
     border-radius: 12px !important;
     padding: 11px 15px !important;
     font-size: 14px;
+  }
+  .dashboard-link-wrap ul li a span {
+    padding-left: 10px;
   }
   /* form .form-field select.form-control {
     font-size: 10px;
@@ -3156,6 +3156,7 @@
     background-position: right 14px center;
     background-size: 14px auto;
     padding-right: 32px !important;
+    padding-left: 11px !important;
   }
   .login-signup-03 .login-btn .btn:first-child,
   .login-signup-03 .login-btn .no-bg {
