commit 0.1.0 added changes for fixed header of profile nad notification 05-April-2023

--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -6585,3 +6585,7 @@ a.eg-close-btn {
   line-height: 38px;
   color: #363853;
 }
+.contact-top-btn-nav .con-btn-wrap > .btn > a {
+  display: flex;
+  align-items: center;
+}
