--- a/src/styles/css/responsive.css
+++ b/src/styles/css/responsive.css
@@ -4103,6 +4103,12 @@
     min-width: 125px;
     padding: 10px 10px !important;
   }
+  .contact-top-btn-nav .con-btn-wrap > .btn > a{
+    font-size: 10px;
+    line-height: 13px;
+    padding: 0px;
+    display: flex;
+  }
 }
 @media only screen and (max-width: 400px) {
   .notification-user-wrap {
