--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -914,8 +914,8 @@ form .form-field .eye-icon {
   vertical-align: middle;
   left: auto;
   right: 18px;
-  top: 50%;
-  transform: translateY(-50%);
+  /* top: 50%;
+  transform: translateY(-50%); */
   bottom: auto;
   margin: auto;
   cursor: pointer;
@@ -2355,7 +2355,7 @@ box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08); */
 .user-img-title-wrap {
   display: flex;
   align-items: center;
-  flex-wrap: no-wrap;
+  flex-wrap: nowrap;
   max-width: 235px;
   min-width: 235px;
   width: 100%;
@@ -2594,7 +2594,6 @@ box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08); */
   background-size: 100% 100%;
 }
 /*dashboard-right-section css close*/
-
 /*send page css starts*/
 .send-main-sec,
 .send-group-main-sec {
@@ -2871,7 +2870,7 @@ box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08); */
   padding-bottom: 43px;
 }
 .pay-btn-wrap {
-  padding-top: 36px;
+  padding-top: 25px;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -2897,7 +2896,7 @@ box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08); */
   stroke: #333;
 }
 .payment-blocks-listing li {
-  padding: 18px 24px;
+  padding: 18px;
   box-shadow: none;
   border-radius: 15px;
   transition: all 0.5s ease-in-out;
@@ -2911,7 +2910,11 @@ box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08); */
 }
 .payment-blocks-listing li:hover {
   background-color: #fff;
-  box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08);
+  box-shadow: 2px 4px 15px rgba(0, 0, 0, 0.08);
+  cursor: pointer;
+}
+.payment-blocks-listing li:hover .input-select-wrap.form-field select {
+  color: #0081c5 !important;
 }
 .payee-name-img-wrap .payee-img {
   width: 58px;
@@ -2919,6 +2922,9 @@ box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08); */
   box-shadow: 0px 20.434px 40.868px rgba(0, 0, 0, 0.08);
   border-radius: 50%;
   overflow: hidden;
+}
+.amount-currency-wrap .selec-wrap .form-control.form-select {
+  color: #0081c5 !important;
 }
 .payee-name-img-wrap .payee-img img {
   /*max-width: 100%;
@@ -2964,7 +2970,7 @@ box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08); */
   border-color: #bdbdbd !important;
   font-family: "Quicksand";
   filter: none;
-  padding: 12px 22px !important;
+  padding: 12px 20px !important;
   transition: all 0.5s ease-in-out;
 }
 .payment-blocks-inner form .input-select-wrap .form-control {
@@ -2998,7 +3004,7 @@ box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08); */
   max-width: 91px;
 }
 .payment-blocks-inner form .input-select-wrap .form-control {
-  padding-right: 108px !important;
+  padding-right: 65px !important;
   appearance: textfield;
   -webkit-appearance: textfield;
 }
@@ -3035,7 +3041,7 @@ box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08); */
 }
 .payment-blocks-inner form li:hover .form-field .form-control {
   border-color: #0081c5 !important;
-  filter: drop-shadow(0px 3.76623px 15.6926px rgba(37, 31, 48, 0.2));
+  /* filter: drop-shadow(0px 3.76623px 15.6926px rgba(37, 31, 48, 0.2)); */
   color: #363853;
 }
 .payment-blocks-inner form li:hover .form-field .form-control::placeholder {
@@ -3059,6 +3065,7 @@ box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08); */
   margin: auto;
   pointer-events: none;
   background-image: url("../../../public/assets/images/pay-select-arrow.png");
+  /* background-image: url("../images/pay-select-arrow.png"); */
   background-repeat: no-repeat;
   background-size: 100% auto;
   background-position: center center;
@@ -3068,6 +3075,7 @@ box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08); */
 .payment-blocks-listing li:hover .input-select-wrap .selec-wrap::after,
 .amount-currency-wrap .selec-wrap::after {
   background-image: url("../../../public/assets/images/pay-select-arrow-hover.png");
+  /* background-image: url("../images/pay-select-arrow-hover.png"); */
 }
 .payment-blocks-listing li:hover .remove-btn .close-icons::before,
 .payment-blocks-listing li:hover .remove-btn .close-icons::after {
@@ -3082,12 +3090,29 @@ box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08); */
 .payment-blocks-listing li > div.remove-btn {
   padding-right: 0 !important;
 }
-.payment-blocks-listing {
+/* .payment-blocks-listing {
   position: relative;
-  padding-bottom: 34px;
+  padding-bottom: 34px; 
   overflow-x: auto;
   white-space: nowrap;
   flex-wrap: nowrap;
+} */
+.payment-blocks-listing {
+  position: relative;
+  /* max-height: calc(100vh - 487px); */
+  margin-bottom: 0px;
+  margin-top: 0px;
+  overflow-x: auto;
+  padding-right: 20px;
+  padding-left: 20px;
+  width: calc(100% + 40px);
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-left: -20px;
+  margin-bottom: 10px;
+}
+.one-time-pay-wrap .payment-blocks-listing::after {
+  display: none;
 }
 .payment-blocks-listing::after {
   position: absolute;
@@ -3112,7 +3137,7 @@ box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08); */
 .payment-footer-block {
   background: #f3f3f3;
   border-radius: 15px;
-  padding: 35px 49px;
+  padding: 32px 50px;
   display: flex;
   flex-wrap: wrap;
 }
@@ -3120,21 +3145,40 @@ box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08); */
   display: flex;
   flex-wrap: wrap;
   width: 100%;
+  justify-content: space-between;
 }
 .payment-footer-block ul .payment-footer-col-label {
   font-family: "Visby Round CF";
   font-style: normal;
   font-weight: 400;
-  font-size: 24px;
-  line-height: 26px;
+  font-size: 21px;
+  line-height: 21px;
   color: #bdbdbd;
-  padding: 0 0 14px;
+  padding: 0px;
 }
-.payment-footer-block .amount {
+.payment-footer-block ul li > * {
+  width: 50%;
+}
+/* .payment-footer-block .amount {
   font-size: 32px;
   line-height: 26px;
   color: #363853;
   margin: 0;
+} */
+.payment-footer-block ul li {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+.payment-footer-block ul li:not(:last-child) {
+  margin-bottom: 15px;
+}
+.payment-footer-block .amount {
+  font-size: 21px;
+  line-height: 21px;
+  color: #363853;
+  margin: 0;
+  padding-left: 10px;
 }
 .amount-currency-wrap {
   display: flex;
@@ -3168,9 +3212,9 @@ box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08); */
 .amount-currency-wrap .selec-wrap::after {
   right: 0;
 }
-.payment-footer-block ul > li:nth-child(2) {
+/* .payment-footer-block ul > li:nth-child(2) {
   padding: 0 199px 0 186px;
-}
+} */
 .payee-name-img-wrap,
 .payment-blocks-listing li {
   flex-wrap: nowrap;
@@ -4238,7 +4282,7 @@ margin-bottom:0px;
   position: absolute;
   top: 5.5px;
   opacity: 0;
-  visibility: hiddden;
+  visibility: hidden;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
     border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
@@ -4651,7 +4695,7 @@ ul::-webkit-scrollbar-thumb:hover {
 }
 .wallet-recent-activity-sec ul li .user-info {
   display: flex;
-  flex-wrap: no-wrap;
+  flex-wrap: nowrap;
   white-space: nowrap;
   justify-content: space-between;
   align-items: center;
@@ -6528,15 +6572,34 @@ ul.notification-list-wrap li:last-child {
   right: 100%;
 }
 .sticky_appear .dashboard-top-sec {
-  position: sticky;
-  top: 0;
   background-color: #fff;
   border-bottom: 1px solid #eee;
   padding-top: 10px;
   padding-bottom: 10px;
   z-index: 9;
   height: 75px;
-  overflow-anchor: none;
+  width: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+.dashboard-top-sec {
+  position: -webkit-sticky;
+  position: sticky;
+  border-bottom: 1px solid transparent;
+  animation: fadeIn 0.5s;
+  z-index: 9;
+}
+.sticky_appear .mobile-toggle .toggle-admin-btn {
+  position: fixed;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 .sticky_appear .dashboard-left-wrap .toggle-admin-btn {
   top: 25px;
@@ -6585,7 +6648,87 @@ a.eg-close-btn {
   line-height: 38px;
   color: #363853;
 }
+.input-select-wrap.form-field > p.ip_currancy {
+  position: absolute;
+  right: 30px;
+  top: 4px;
+  margin: 0px !important;
+  padding: 0px 0px 0px 10px !important;
+  font-family: "Quicksand";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 40px;
+  color: #9b9b9b;
+  border-left: 1px solid #bdbdbd !important;
+}
+.payment-blocks-listing li:hover p.ip_currancy {
+  color: #0081c5;
+  border-color: #0081c5 !important;
+}
+.one-time-pay-wrap .amount > span {
+  color: #0081c5 !important;
+  padding-left: 35px;
+}
 .contact-top-btn-nav .con-btn-wrap > .btn > a {
   display: flex;
   align-items: center;
+}
+/* CSS Added on 06-04 */
+.resend-otp-wrap {
+  text-align: center;
+  width: 100%;
+  font-family: "Quicksand";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  color: #5b5b5b;
+  margin-bottom: 25px;
+}
+.resend-otp-wrap span:first-child {
+  color: #ff3333;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+.resend-otp-wrap button.disabled {
+  color: #9d9d9d;
+  pointer-events: none;
+}
+.resend-otp-wrap button {
+  cursor: pointer;
+  font-weight: 700;
+  padding: 0px;
+  border: none;
+  background-color: transparent;
+  color: #0081c5;
+}
+.resend-otp-wrap button:hover {
+  color: #363853;
+}
+.resend-otp-wrap p {
+  margin-top: 15px !important;
+  margin-bottom: 10px !important;
+  padding: 0px !important;
+  font-size: 18px;
+  line-height: 22px;
+}
+
+/* New Added */
+.form-field input.form-control.error-field {
+  border-color: red !important;
+}
+/* For tooltip */
+.tooltip-invalid .tooltip-arrow::before,
+.tooltip-invalid .tooltip-arrow::after {
+  border-bottom-color: #dc3545e6 !important;
+}
+.tooltip-invalid {
+  padding: 1px;
+  padding-left: 5px;
+  padding-right: 5px;
+  font-size: 11px;
+  background: #dc3545e6;
+  border-color: #dc3545e6;
+  color: #ffffff;
 }
