commit 0.1.0 added changes in one-time-payment module 10-April-2023

--- a/src/components/ui/input.module.scss
+++ b/src/components/ui/input.module.scss
@@ -5,3 +5,13 @@
     margin: 0;
   }
 }
+
+.number_input {
+  &[type="number"]::-webkit-inner-spin-button,
+  &[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0;
+  }
+}
